--- a/awx-controller-tasks.yml
+++ b/awx-controller-tasks.yml
@@ -6,6 +6,8 @@
      - name: install various tools
        yum: 
          name: "{{ packages }}"
+         state: present
+         update_cache: yes
        vars:
          packages:
            - python3-pip
