--- a/cf_stack_example.yml
+++ b/cf_stack_example.yml
@@ -18,13 +18,8 @@
           VPCName: Some-Other-VPC
         tags:
           Stack: ansible-cloudformation
-
-    - name: Gather info about stack created before
-      cloudformation_info:
-        stack_name: "ansible-cloudformation"
-        region: "{{ aws_region }}"
       register: output
 
     - name: Print stack info
       debug:
-        msg: "{{ output['cloudformation']['my-cloudformation-stack'] }}"
+        msg: "{{ output }}"
